styles/components/_showcase.scss
section {
	.container-sm {
		.canvas-container {
			.demo-bar {
				border-radius: 5px;
				background: $color-white;
				box-shadow: 0px 4px 17px 0px rgba(129, 139, 197, 0.24);

				display: flex;
				flex-direction: row;
				align-items: center;
				justify-content: space-between;

				padding: rem(1) rem(1);
				margin-top: rem(10);

				@media (min-width: $from-small) {
					padding: rem(1);
					max-width: rem(40);
					margin: rem(10) auto rem(3);
				}
				p {
					margin: 0;
					font-size: rem(1);
					font-weight: 600;
					text-align: center;
					width: 50%;
					@media (min-width: $from-mini) {
						font-size: rem(1.2);
					}
					@media (min-width: $from-tiny) {
						font-size: rem(1.4);
					}
					@media (min-width: $from-small) {
						font-size: rem(1.2);
					}
				}
			}
			img {
				margin-top: rem(5);
				margin-bottom: rem(5);
				width: 100%;
				height: auto;
			}
		}
	}
}

